--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
   "dependencies": {},
   "optionalDependencies": {},
   "devDependencies": {
-    "gulp": "~3.5.5",
-    "gulp-sass": "~0.7",
-    "gulp-util": "~2.2",
-    "coffee-script": "~1.7",
-    "webpack": "~1.0",
-    "webpack-dev-server": "~1.2",
-    "style-loader": "~0.6",
     "coffee-loader": "~0.7",
+    "coffee-script": "~1.7",
+    "css-loader": "^0.15.6",
+    "gulp": "~3.5.5",
+    "gulp-sass": "^2.0.4",
+    "gulp-util": "~2.2",
+    "node-sass": "^3.2.0",
+    "sass-loader": "^1.0.3",
     "script-loader": "~0.5",
-    "sass-loader": "~0.0",
-    "node-sass": "~0.7.0"
+    "style-loader": "~0.6",
+    "webpack": "~1.0",
+    "webpack-dev-server": "~1.2"
   }
 }
